--- a/ci/config.yml
+++ b/ci/config.yml
@@ -1,10 +1,9 @@
 global:
-  qsname: quickstart-aws-vpc
-  owner: quickstart@amazon.com
+  cis3bucket: 's3://quickstart-ci-bucket'
   marketplace-ami: false
-  cis3bucket:  s3://quickstart-ci-bucket
-  prod-s3-path: s3://quickstart-reference/aws/vpc
-  reporting: true
+  owner: quickstart@amazon.com
+  prod-s3-path: 's3://quickstart-reference/aws/vpc'
+  qsname: quickstart-aws-vpc
   regions:
     - ap-northeast-1
     - ap-northeast-2
@@ -16,37 +15,60 @@ global:
     - us-east-1
     - us-west-1
     - us-west-2
+  reporting: true
 tests:
   complete-us-east-1:
-    template_file: aws-vpc.template
     parameter_input: aws-vpc-complete-us-east-1.json
+    regions:
+      - us-east-1
+    template_file: aws-vpc.template
   defaults-ap-northeast-1:
-    template_file: aws-vpc.template
     parameter_input: aws-vpc-defaults-ap-northeast-1.json
+    regions:
+      - ap-northeast-1
+    template_file: aws-vpc.template
   defaults-ap-northeast-2:
-    template_file: aws-vpc.template
     parameter_input: aws-vpc-defaults-ap-northeast-2.json
+    regions:
+      - ap-northeast-2
+    template_file: aws-vpc.template
   defaults-ap-southeast-1:
-    template_file: aws-vpc.template
     parameter_input: aws-vpc-defaults-ap-southeast-1.json
+    regions:
+      - ap-southeast-1
+    template_file: aws-vpc.template
   defaults-ap-southeast-2:
-    template_file: aws-vpc.template
     parameter_input: aws-vpc-defaults-ap-southeast-2.json
+    regions:
+      - ap-southeast-2
+    template_file: aws-vpc.template
   defaults-eu-central-1:
-    template_file: aws-vpc.template
     parameter_input: aws-vpc-defaults-eu-central-1.json
+    regions:
+      - eu-central-1
+    template_file: aws-vpc.template
   defaults-eu-west-1:
-    template_file: aws-vpc.template
     parameter_input: aws-vpc-defaults-eu-west-1.json
+    regions:
+      - eu-west-1
+    template_file: aws-vpc.template
   defaults-sa-east-1:
-    template_file: aws-vpc.template
     parameter_input: aws-vpc-defaults-sa-east-1.json
+    regions:
+      - sa-east-1
+    template_file: aws-vpc.template
   defaults-us-east-1:
-    template_file: aws-vpc.template
     parameter_input: aws-vpc-defaults-us-east-1.json
+    regions:
+      - us-east-1
+    template_file: aws-vpc.template
   defaults-us-west-1:
-    template_file: aws-vpc.template
     parameter_input: aws-vpc-defaults-us-west-1.json
-  defaults-us-west-2:
+    regions:
+      - us-west-1
     template_file: aws-vpc.template
+  defaults-us-west-2:
     parameter_input: aws-vpc-defaults-us-west-2.json
+    regions:
+      - us-west-2
+    template_file: aws-vpc.template
