Changed AvailabilityZones parameter type

--- a/templates/aws-vpc-defaults-ap-northeast-1.json
+++ b/templates/aws-vpc-defaults-ap-northeast-1.json
@@ -1,10 +1,7 @@
 [
     {
         "ParameterKey": "AvailabilityZones",
-        "ParameterValue": [
-            "ap-northeast-1b",
-            "ap-northeast-1c"
-        ]
+        "ParameterValue": "ap-northeast-1b,ap-northeast-1c"
     },
     {
         "ParameterKey": "CreateProtectedSubnets",
