--- a/templates/aws-vpc-defaults-ap-southeast-1.json
+++ b/templates/aws-vpc-defaults-ap-southeast-1.json
@@ -1,10 +1,7 @@
 [
     {
         "ParameterKey": "AvailabilityZones",
-        "ParameterValue": [
-            "ap-southeast-1a",
-            "ap-southeast-1b"
-        ]
+        "ParameterValue": "ap-southeast-1a,ap-southeast-1b"
     },
     {
         "ParameterKey": "CreateProtectedSubnets",
