--- a/templates/aws-vpc-defaults-ap-southeast-2.json
+++ b/templates/aws-vpc-defaults-ap-southeast-2.json
@@ -1,10 +1,7 @@
 [
     {
         "ParameterKey": "AvailabilityZones",
-        "ParameterValue": [
-            "ap-southeast-2a",
-            "ap-southeast-2b"
-        ]
+        "ParameterValue": "ap-southeast-2a,ap-southeast-2b"
     },
     {
         "ParameterKey": "CreateProtectedSubnets",
