--- a/templates/aws-vpc-complete-us-east-1.json
+++ b/templates/aws-vpc-complete-us-east-1.json
@@ -1,7 +1,7 @@
 [
     {
         "ParameterKey": "AvailabilityZones",
-        "ParameterValue": "us-east-1b,us-east-1c,us-east-1d,us-east-1e"
+        "ParameterValue": "us-east-1a,us-east-1b,us-east-1c,us-east-1e"
     },
     {
         "ParameterKey": "CreateProtectedSubnets",
