Updated CreateNACLProtectedSubnets parameter

--- a/templates/aws-vpc-defaults-ap-northeast-1.json
+++ b/templates/aws-vpc-defaults-ap-northeast-1.json
@@ -4,7 +4,7 @@
         "ParameterValue": "ap-northeast-1b,ap-northeast-1c"
     },
     {
-        "ParameterKey": "CreateProtectedSubnets",
+        "ParameterKey": "CreateNACLProtectedSubnets",
         "ParameterValue": "false"
     },
     {
