--- a/templates/aws-vpc-defaults-ap-southeast-1.json
+++ b/templates/aws-vpc-defaults-ap-southeast-1.json
@@ -4,7 +4,7 @@
         "ParameterValue": "ap-southeast-1a,ap-southeast-1b"
     },
     {
-        "ParameterKey": "CreateProtectedSubnets",
+        "ParameterKey": "CreateNACLProtectedSubnets",
         "ParameterValue": "false"
     },
     {
