--- a/templates/aws-vpc-defaults-sa-east-1.json
+++ b/templates/aws-vpc-defaults-sa-east-1.json
@@ -4,7 +4,7 @@
         "ParameterValue": "sa-east-1b,sa-east-1c"
     },
     {
-        "ParameterKey": "CreateProtectedSubnets",
+        "ParameterKey": "CreateNACLProtectedSubnets",
         "ParameterValue": "false"
     },
     {
