--- a/templates/aws-vpc-defaults-us-east-1.json
+++ b/templates/aws-vpc-defaults-us-east-1.json
@@ -4,7 +4,7 @@
         "ParameterValue": "us-east-1a,us-east-1b"
     },
     {
-        "ParameterKey": "CreateProtectedSubnets",
+        "ParameterKey": "CreateNACLProtectedSubnets",
         "ParameterValue": "false"
     },
     {
