--- a/templates/aws-vpc-complete-us-east-1.json
+++ b/templates/aws-vpc-complete-us-east-1.json
@@ -4,7 +4,7 @@
         "ParameterValue": "us-east-1a,us-east-1b,us-east-1c,us-east-1e"
     },
     {
-        "ParameterKey": "CreateProtectedSubnets",
+        "ParameterKey": "CreateNACLProtectedSubnets",
         "ParameterValue": "true"
     },
     {
