--- a/templates/aws-vpc-defaults-ap-northeast-2.json
+++ b/templates/aws-vpc-defaults-ap-northeast-2.json
@@ -4,7 +4,7 @@
         "ParameterValue": "ap-northeast-2a,ap-northeast-2c"
     },
     {
-        "ParameterKey": "CreateProtectedSubnets",
+        "ParameterKey": "CreateNACLProtectedSubnets",
         "ParameterValue": "false"
     },
     {
