--- a/templates/aws-vpc.template
+++ b/templates/aws-vpc.template
@@ -49,52 +49,52 @@
                     "default": "Availability Zones"
                 },
                 "CreateNACLProtectedSubnets": {
-                    "default": "Create Additional Network ACL Protected Subnets"
+                    "default": "Create network ACL protected subnets"
                 },
                 "KeyPairName": {
-                    "default": "Key Pair Name"
+                    "default": "Key pair name"
                 },
                 "NACLProtectedSubnet1CIDR": {
-                    "default": "Network ACL Protected Subnet 1 CIDR"
+                    "default": "Network ACL protected subnet 1 CIDR"
                 },
                 "NACLProtectedSubnet2CIDR": {
-                    "default": "Network ACL Protected Subnet 2 CIDR"
+                    "default": "Network ACL protected subnet 2 CIDR"
                 },
                 "NACLProtectedSubnet3CIDR": {
-                    "default": "Network ACL Protected Subnet 3 CIDR"
+                    "default": "Network ACL protected subnet 3 CIDR"
                 },
                 "NACLProtectedSubnet4CIDR": {
-                    "default": "Network ACL Protected Subnet 4 CIDR"
+                    "default": "Network ACL protected subnet 4 CIDR"
                 },
                 "NATInstanceType": {
-                    "default": "NAT Instance Type"
+                    "default": "NAT instance type"
                 },
                 "NumberOfAZs": {
                     "default": "Number of Availability Zones"
                 },
                 "PrivateSubnet1CIDR": {
-                    "default": "Private Subnet 1 CIDR"
+                    "default": "Private subnet 1 CIDR"
                 },
                 "PrivateSubnet2CIDR": {
-                    "default": "Private Subnet 2 CIDR"
+                    "default": "Private subnet 2 CIDR"
                 },
                 "PrivateSubnet3CIDR": {
-                    "default": "Private Subnet 3 CIDR"
+                    "default": "Private subnet 3 CIDR"
                 },
                 "PrivateSubnet4CIDR": {
-                    "default": "Private Subnet 4 CIDR"
+                    "default": "Private subnet 4 CIDR"
                 },
                 "PublicSubnet1CIDR": {
-                    "default": "Public Subnet 1 CIDR"
+                    "default": "Public subnet 1 CIDR"
                 },
                 "PublicSubnet2CIDR": {
-                    "default": "Public Subnet 2 CIDR"
+                    "default": "Public subnet 2 CIDR"
                 },
                 "PublicSubnet3CIDR": {
-                    "default": "Public Subnet 3 CIDR"
+                    "default": "Public subnet 3 CIDR"
                 },
                 "PublicSubnet4CIDR": {
-                    "default": "Public Subnet 4 CIDR"
+                    "default": "Public subnet 4 CIDR"
                 },
                 "VPCCIDR": {
                     "default": "VPC CIDR"
@@ -113,35 +113,35 @@
                 "false"
             ],
             "Default": "false",
-            "Description": "To create additional network ACL protected subnets in each AZ, set this parameter to true.",
+            "Description": "Set to true to create a network ACL protected subnet in each Availability Zone. If false, the CIDR parameters for those subnets will be ignored.",
             "Type": "String"
         },
         "KeyPairName": {
-            "Description": "Public/private key pairs allow you to securely connect to your NAT instance after it launches. This is only used if the region does not support NAT gateways.",
+            "Description": "Public/private key pairs allow you to securely connect to your NAT instance after it launches. This is used only if the region does not support NAT gateways.",
             "Type": "AWS::EC2::KeyPair::KeyName"
         },
         "NACLProtectedSubnet1CIDR": {
             "AllowedPattern": "^(([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])\\.){3}([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])(\\/([0-9]|[1-2][0-9]|3[0-2]))$",
             "Default": "10.0.48.0/21",
-            "Description": "CIDR block for Network ACL Protected subnet 1 located in AZ1",
+            "Description": "CIDR block for network ACL protected subnet 1 located in Availability Zone 1",
             "Type": "String"
         },
         "NACLProtectedSubnet2CIDR": {
             "AllowedPattern": "^(([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])\\.){3}([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])(\\/([0-9]|[1-2][0-9]|3[0-2]))$",
             "Default": "10.0.112.0/21",
-            "Description": "CIDR block for Network ACL Protected subnet 2 located in AZ2",
+            "Description": "CIDR block for network ACL protected subnet 2 located in Availability Zone 2",
             "Type": "String"
         },
         "NACLProtectedSubnet3CIDR": {
             "AllowedPattern": "^(([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])\\.){3}([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])(\\/([0-9]|[1-2][0-9]|3[0-2]))$",
             "Default": "10.0.176.0/21",
-            "Description": "CIDR block for Network ACL Protected subnet 3 located in AZ3",
+            "Description": "CIDR block for network ACL protected subnet 3 located in Availability Zone 3",
             "Type": "String"
         },
         "NACLProtectedSubnet4CIDR": {
             "AllowedPattern": "^(([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])\\.){3}([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])(\\/([0-9]|[1-2][0-9]|3[0-2]))$",
             "Default": "10.0.240.0/21",
-            "Description": "CIDR block for Network ACL Protected subnet 4 located in AZ4",
+            "Description": "CIDR block for network ACL protected subnet 4 located in Availability Zone 4",
             "Type": "String"
         },
         "NATInstanceType": {
@@ -156,7 +156,7 @@
                 "m4.large"
             ],
             "Default": "t2.small",
-            "Description": "Amazon EC2 instance type for the NAT Instances. This is only used if the region does not support NAT gateways.",
+            "Description": "Amazon EC2 instance type for the NAT instances. This is used only if the region does not support NAT gateways.",
             "Type": "String"
         },
         "NumberOfAZs": {
@@ -166,55 +166,55 @@
                 "4"
             ],
             "Default": "2",
-            "Description": "Number of Availability Zones to use in the VPC. This must match the number of AZs in the list of Availability Zones parameter.",
+            "Description": "Number of Availability Zones to use in the VPC. This must match your selections in the list of Availability Zones parameter.",
             "Type": "String"
         },
         "PrivateSubnet1CIDR": {
             "AllowedPattern": "^(([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])\\.){3}([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])(\\/([0-9]|[1-2][0-9]|3[0-2]))$",
             "Default": "10.0.0.0/19",
-            "Description": "CIDR block for Private subnet 1 located in AZ1",
+            "Description": "CIDR block for private subnet 1 located in Availability Zone 1",
             "Type": "String"
         },
         "PrivateSubnet2CIDR": {
             "AllowedPattern": "^(([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])\\.){3}([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])(\\/([0-9]|[1-2][0-9]|3[0-2]))$",
             "Default": "10.0.64.0/19",
-            "Description": "CIDR block for Private subnet 2 located in AZ2",
+            "Description": "CIDR block for private subnet 2 located in Availability Zone 2",
             "Type": "String"
         },
         "PrivateSubnet3CIDR": {
             "AllowedPattern": "^(([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])\\.){3}([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])(\\/([0-9]|[1-2][0-9]|3[0-2]))$",
             "Default": "10.0.128.0/19",
-            "Description": "CIDR block for Private subnet 3 located in AZ3",
+            "Description": "CIDR block for private subnet 3 located in Availability Zone 3",
             "Type": "String"
         },
         "PrivateSubnet4CIDR": {
             "AllowedPattern": "^(([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])\\.){3}([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])(\\/([0-9]|[1-2][0-9]|3[0-2]))$",
             "Default": "10.0.192.0/19",
-            "Description": "CIDR block for Private subnet 4 located in AZ4",
+            "Description": "CIDR block for private subnet 4 located in Availability Zone 4",
             "Type": "String"
         },
         "PublicSubnet1CIDR": {
             "AllowedPattern": "^(([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])\\.){3}([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])(\\/([0-9]|[1-2][0-9]|3[0-2]))$",
             "Default": "10.0.32.0/20",
-            "Description": "CIDR block for the Public DMZ subnet 1 located in AZ1",
+            "Description": "CIDR block for the public DMZ subnet 1 located in Availability Zone 1",
             "Type": "String"
         },
         "PublicSubnet2CIDR": {
             "AllowedPattern": "^(([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])\\.){3}([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])(\\/([0-9]|[1-2][0-9]|3[0-2]))$",
             "Default": "10.0.96.0/20",
-            "Description": "CIDR block for the Public DMZ subnet 2 located in AZ2",
+            "Description": "CIDR block for the public DMZ subnet 2 located in Availability Zone 2",
             "Type": "String"
         },
         "PublicSubnet3CIDR": {
             "AllowedPattern": "^(([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])\\.){3}([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])(\\/([0-9]|[1-2][0-9]|3[0-2]))$",
             "Default": "10.0.160.0/20",
-            "Description": "CIDR block for the Public DMZ subnet 3 located in AZ3",
+            "Description": "CIDR block for the public DMZ subnet 3 located in Availability Zone 3",
             "Type": "String"
         },
         "PublicSubnet4CIDR": {
             "AllowedPattern": "^(([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])\\.){3}([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])(\\/([0-9]|[1-2][0-9]|3[0-2]))$",
             "Default": "10.0.224.0/20",
-            "Description": "CIDR block for the Public DMZ subnet 4 located in AZ4",
+            "Description": "CIDR block for the public DMZ subnet 4 located in Availability Zone 4",
             "Type": "String"
         },
         "VPCCIDR": {
