--- a/templates/aws-vpc-defaults-ap-northeast-2.json
+++ b/templates/aws-vpc-defaults-ap-northeast-2.json
@@ -4,28 +4,12 @@
         "ParameterValue": "ap-northeast-2a,ap-northeast-2c"
     },
     {
-        "ParameterKey": "CreateNACLProtectedSubnets",
+        "ParameterKey": "CreateAdditionalPrivateSubnets",
         "ParameterValue": "false"
     },
     {
         "ParameterKey": "KeyPairName",
         "ParameterValue": "cikey"
-    },
-    {
-        "ParameterKey": "NACLProtectedSubnet1CIDR",
-        "ParameterValue": "10.0.48.0/21"
-    },
-    {
-        "ParameterKey": "NACLProtectedSubnet2CIDR",
-        "ParameterValue": "10.0.112.0/21"
-    },
-    {
-        "ParameterKey": "NACLProtectedSubnet3CIDR",
-        "ParameterValue": "10.0.176.0/21"
-    },
-    {
-        "ParameterKey": "NACLProtectedSubnet4CIDR",
-        "ParameterValue": "10.0.240.0/21"
     },
     {
         "ParameterKey": "NATInstanceType",
@@ -36,20 +20,36 @@
         "ParameterValue": "2"
     },
     {
-        "ParameterKey": "PrivateSubnet1CIDR",
+        "ParameterKey": "PrivateSubnet1ACIDR",
         "ParameterValue": "10.0.0.0/19"
     },
     {
-        "ParameterKey": "PrivateSubnet2CIDR",
+        "ParameterKey": "PrivateSubnet1BCIDR",
+        "ParameterValue": "10.0.48.0/21"
+    },
+    {
+        "ParameterKey": "PrivateSubnet2ACIDR",
         "ParameterValue": "10.0.64.0/19"
     },
     {
-        "ParameterKey": "PrivateSubnet3CIDR",
+        "ParameterKey": "PrivateSubnet2BCIDR",
+        "ParameterValue": "10.0.112.0/21"
+    },
+    {
+        "ParameterKey": "PrivateSubnet3ACIDR",
         "ParameterValue": "10.0.128.0/19"
     },
     {
-        "ParameterKey": "PrivateSubnet4CIDR",
+        "ParameterKey": "PrivateSubnet3BCIDR",
+        "ParameterValue": "10.0.176.0/21"
+    },
+    {
+        "ParameterKey": "PrivateSubnet4ACIDR",
         "ParameterValue": "10.0.192.0/19"
+    },
+    {
+        "ParameterKey": "PrivateSubnet4BCIDR",
+        "ParameterValue": "10.0.240.0/21"
     },
     {
         "ParameterKey": "PublicSubnet1CIDR",
