Updated description. Updated order of AZ parameters.

--- a/templates/aws-vpc.template
+++ b/templates/aws-vpc.template
@@ -1,6 +1,6 @@
 {
     "AWSTemplateFormatVersion": "2010-09-09",
-    "Description": "This template creates a multi-AZ, multi-subnet Virtual Private Cloud (VPC) infrastructure with managed NAT gateways in the public subnet for each Availability Zone. Additional private subnets can also be created with dedicated custom network ACLs. If NAT gateways are not available for the region, NAT instances are deployed. **WARNING** This template creates AWS resources. You will be billed for the AWS resources used if you create a stack from this template. QS(0027)",
+    "Description": "This template creates a Multi-AZ, multi-subnet VPC infrastructure with managed NAT gateways in the public subnet for each Availability Zone. You can also create additional private subnets with dedicated custom network access control lists (ACLs). If you deploy the Quick Start in a region that doesn’t support NAT gateways, NAT instances are deployed instead. **WARNING** This template creates AWS resources. You will be billed for the AWS resources used if you create a stack from this template. QS(0027)",
     "Metadata": {
         "AWS::CloudFormation::Interface": {
             "ParameterGroups": [
@@ -9,8 +9,8 @@
                         "default": "Availability Zone Configuration"
                     },
                     "Parameters": [
-                        "NumberOfAZs",
-                        "AvailabilityZones"
+                        "AvailabilityZones",
+                        "NumberOfAZs"
                     ]
                 },
                 {
