--- a/templates/aws-vpc.template
+++ b/templates/aws-vpc.template
@@ -706,7 +706,8 @@
                         "Key": "Role",
                         "Value": "Public subnet 1"
                     }
-                ]
+                ],
+                "MapPublicIpOnLaunch": true
             }
         },
         "PublicSubnet2": {
@@ -735,7 +736,8 @@
                         "Key": "Role",
                         "Value": "Public subnet 2"
                     }
-                ]
+                ],
+                "MapPublicIpOnLaunch": true
             }
         },
         "PublicSubnet3": {
@@ -765,7 +767,8 @@
                         "Key": "Role",
                         "Value": "Public subnet 3"
                     }
-                ]
+                ],
+                "MapPublicIpOnLaunch": true
             }
         },
         "PublicSubnet4": {
@@ -795,7 +798,8 @@
                         "Key": "Role",
                         "Value": "Public subnet 4"
                     }
-                ]
+                ],
+                "MapPublicIpOnLaunch": true
             }
         },
         "PrivateSubnet1ARouteTable": {
